--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.github.marcosemiao</groupId>
 	<artifactId>resource-tracer-filter</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 
 	<name>Resource Tracer Filter</name>
 
@@ -27,7 +26,7 @@
 		<connection>scm:git:git@github.com:marcosemiao/resource-tracer-filter.git</connection>
 		<developerConnection>scm:git:git@github.com:marcosemiao/resource-tracer-filter.git</developerConnection>
 		<url>git@github.com:marcosemiao/resource-tracer-filter.git</url>
-		<tag>HEAD</tag>
+		<tag>resource-tracer-filter-1.0.0</tag>
 	</scm>
 
 	<distributionManagement>
