--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>com.github.marcosemiao</groupId>
 	<artifactId>resource-tracer-filter</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 
 	<name>Resource Tracer Filter</name>
 
@@ -30,7 +30,7 @@
 		<connection>scm:git:git@github.com:marcosemiao/resource-tracer-filter.git</connection>
 		<developerConnection>scm:git:git@github.com:marcosemiao/resource-tracer-filter.git</developerConnection>
 		<url>git@github.com:marcosemiao/resource-tracer-filter.git</url>
-		<tag>HEAD</tag>
+		<tag>resource-tracer-filter-1.0.0</tag>
 	</scm>
 
 	<distributionManagement>
